force-app/main/default/objects/Krow__Zendesk_Configuration__c/Krow__Zendesk_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for holding Zendesk Configuration information</description>
    <label>Zendesk Configuration</label>
</CustomObject>