force-app/main/default/objects/Krow__Zendesk_Configuration__c/fields/Krow__Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Client_ID__c</fullName>
    <label>Client ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>