force-app/main/default/objects/Krow__Zendesk_Configuration__c/fields/Krow__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Krow__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>