force-app/main/default/objects/Krow__Zendesk_Configuration__c/fields/Krow__Enable_Zendesk_Integration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Zendesk_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Zendesk Integration</label>
    <type>Checkbox</type>
</CustomField>