force-app/main/default/objects/Krow__Zendesk_Configuration__c/fields/Krow__Zendesk_Domain_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__Zendesk_Domain_Url__c</fullName>
    <label>Zendesk Domain Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>